gcc/testsuite/rust/rustc/ui/parser/issues/issue-68890-2_dg.rs
fn main() {}

type X<'a> = (?'a) +;
// { dg-error ".E0224." "" { target *-*-* } .-1 }
// { dg-error ".E0224." "" { target *-*-* } .-2 }

